# hash256-miner

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: keccak256.cuh  keccak256_host.cpp  main.cpp  miner_kernel.cu  miner_kernel.cuh  rpc_client.cpp  rpc_client.h  signer.cpp  signer.h  tx_builder.cpp  tx_builder.h  types.h
